<resources>
    <string name="app_name">RimpsaReal</string>
    <string name="bienvenido">Bienvenido</string>
    <string name="inicia_sesion">Inicio de sesión</string>
    <string name="usuario">Usuario</string>
    <string name="user">User</string>
    <string name="contrasena">Contraseña</string>
    <string name="password">Password</string>
    <string name="iniciar_sesion">Iniciar sesión</string>
</resources>