<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/rimpsa_fondo"
    tools:context=".MainActivity">
    
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/primary_color"
        android:alpha="0.8"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="28dp"
        android:gravity="center">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/logo_blanco"
            tools:ignore="ContentDescription">
        </ImageView>

    </LinearLayout>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        app:cardCornerRadius="40sp"
        android:layout_marginBottom="-40sp"
        tools:ignore="VisualLintBounds">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="28dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/bienvenido"
                android:textColor="@color/tertiary_color"
                android:textSize="36sp"
                android:textStyle="bold">

            </TextView>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/inicia_sesion"
                android:textSize="24sp"
                android:alpha="0.8">
            </TextView>

            <View
                android:layout_width="wrap_content"
                android:layout_height="20sp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/usuario"
                android:textSize="24sp"
                android:textStyle="bold"
                android:textColor="@color/primary_color"
                android:alpha="0.6"/>

            <EditText
                android:layout_width="match_parent"
                android:layout_height="80sp"
                android:textSize="22sp"
                android:inputType="textEmailAddress"
                android:autofillHints="emailAddress"
                android:drawableEnd="@drawable/mail_icon"
                android:importantForAccessibility="no"
                android:hint="@string/user"
                android:textColor="@color/black"
                tools:ignore="VisualLintTextFieldSize"/>

            <View
                android:layout_width="wrap_content"
                android:layout_height="20sp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/contrasena"
                android:textSize="24sp"
                android:textStyle="bold"
                android:textColor="@color/primary_color"
                android:alpha="0.6"/>

            <EditText
                android:layout_width="match_parent"
                android:layout_height="80sp"
                android:textSize="22sp"
                android:inputType="textPassword"
                android:drawableEnd="@drawable/clip_icon"
                android:importantForAccessibility="no"
                android:hint="@string/password"
                android:textColor="@color/black"
                tools:ignore="VisualLintTextFieldSize"/>

            <View
                android:layout_width="wrap_content"
                android:layout_height="20sp"/>

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/shape_for_buttom"
                android:text="@string/iniciar_sesion"
                android:textColor="@color/white"
                android:textSize="20sp" />

            <View
                android:layout_width="wrap_content"
                android:layout_height="40sp"/>

        </LinearLayout>

    </androidx.cardview.widget.CardView>

</RelativeLayout>